--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,6 +37,12 @@ website:
       - href: ohi-global/documents/OHI.bib
         text: References
         
+        
+  page-footer: 
+    left: Learn more about the [Ocean Health Index](https://oceanhealthindex.org/){target=_blank}
+    # and a general overview of the [methodology](https://oceanhealthindex.org/methodology/)
+    right: Source code available on [{{< fa brands github title="the Github octocat" >}} Github](https://github.com/OHI-Science/ohi-methods/tree/main){target=_blank}
+  # {{< fa icon-name title="descriptive text for accessibility" >}}  
 
 format:
   html:
