--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,7 +45,7 @@ website:
   page-footer: 
     left: Learn more about the [Ocean Health Index](https://oceanhealthindex.org/){target=_blank}
     # and a general overview of the [methodology](https://oceanhealthindex.org/methodology/)
-    right: Source code available on [{{< fa brands github title="the Github octocat" >}} Github](https://github.com/OHI-Science/ohi-methods/tree/main){target=_blank}
+    right: Source code available on [{{< fa brands github title="the Github octocat" >}} GitHub](https://github.com/OHI-Science/ohi-methods/tree/main){target=_blank}
   # {{< fa icon-name title="descriptive text for accessibility" >}}  
 
 format:
