added OHI logos and infographic to media folder, added logo to sidebar in yaml

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ project:
 website:
   sidebar:
     title: "OHI Methods 2024"
-    logo: media/ohi_banner.png
+    logo: media/OHI_Logo_Blue.png
     style: "docked"
     search: true
     contents:
