--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,8 +42,8 @@ website:
         text: 6. Description of Data Layers
         # 107 subsections :)
         
-      # - href: ohi-global/documents/OHI.bib
-      #   text: References
+      - href: ohi-global/documents/OHI.bib
+        text: References
         
         
   page-footer: 
