--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ project:
   
 
 website:
-  favicon: media/favicon-option.png
+  favicon: media/favicon-ohi-test.png
   sidebar:
     title: "OHI Methods 2024"
     logo: media/OHI_Logo_Blue.png
