--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,6 +6,9 @@ project:
     - "*.qmd"
     - "*.png"
   output-dir: docs
+  preview: 
+    port: 4200
+    browser: true
   
 
 website:
@@ -44,7 +47,7 @@ website:
         text: 6. Goal Models and Data
         # has all 10 goals etc.
         
-      - href: data-layers/Sanjdata-layer-descriptions.qmd
+      - href: data-layers/data-layer-descriptions.qmd
         text: 7. Description of Data Layers
         # 107 subsections :)
         
