Fixing githubusercontent links for tables 7.1 and 7.2, integrating new citation keys for goal models and data and data layer descriptions, and adding the revamped Tourism & Recreation methods.  Added to the ocean acidification layer description.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,7 +51,7 @@ website:
         text: 7. Description of Data Layers
         # 107 subsections :)
         
-      - href: ohi-global/documents/OHI.bib
+      - href: references.bib
         text: References
         icon: book
         
